<resources>
    <string name="app_name">SardiniaQuiz</string>
    <string name="attribution_text">1. Sardinian flag (modified): By Angelus (https://commons.wikimedia.org/wiki/File:Flag_of_Sardinia,_Italy.svg), License: No attribution required.\n2. Flying Sardinia flag photo: By Stephanie Albert (https://pixabay.com/photos/sardinia-flag-sky-3408149/), License: Free for commercial use. No attribution required.</string>
    <string name="app_tag_line">Refresh your knowledge and win!</string>
    <string name="sardinia_flag">Sardinia flag</string>
    <string name="user_name_text">Enter your name here to win</string>
    <string name="your_score_text">Your score</string>
    <string name="user_score_text">None</string>
    <string name="welcome_greeting">Welcome.\nShow your love to Sardinia and win a prize!</string>
    <string name="warning_text">Warning: Exciting things ahead! Beware of falling in love with Sardinia again!</string>
    <string name="quiz_level_header_text">Please select the level</string>
    <string name="level_select_text">Please select the level</string>
    <string name="level1_text">Easy</string>
    <string name="level2_text">Medium</string>
    <string name="level3_text">Advanced</string>
    <string name="go_button_text">Go</string>
    <string name="next_button_text">Next</string>
    <string name="submit_button_text">Submit</string>
    <string name="quiz_header1">Q1</string>
    <string name="quiz_header2">Q2</string>
    <string name="quiz_header3">Q3</string>
    <string name="quiz_header4">Q4</string>
    <string name="quiz_header5">Q5</string>
    <string name="quiz_header6">Q6</string>
    <string name="quiz_header7">Q7</string>
    <string name="quiz_header8">Q8</string>
    <string name="quiz_header9">Q9</string>
    <string name="quiz_header10">Q10</string>
    <string name="q1_text">Q1. What is the most unique thing associated with Sardinia?</string>
    <string name="q2_text">Q2. How many Nuraghi are there in Sardinia?</string>
    <string name="q3_text">Q3. What is the largest and oldest nuraghi complex?</string>
    <string name="q4_text">Q4. What were nuraghi built for?</string>
    <string name="q5_text">Q5. What is the main cultural festival the Sardinians are most proud of?</string>
    <string name="q6_text">Q6. Which Sardinian beach is considered the most beautiful in Mediterranean?</string>
    <string name="q7_text">Q7. Where is the biggest ancient phoenician cemetery located?</string>
    <string name="q8_text">Q8. In which part of Sardinia do the world\'s VIPs usually spend their summer holiday?</string>
    <string name="q9_text">Q9. Where is the Italian unification father, Garibaldi, buried?</string>
    <string name="q10_text">Q10. What is the name of the 15km long underground caves?</string>
    <string name="q1_a1">Pristine beaches</string>
    <string name="q1_a2">Ancient Carnivals</string>
    <string name="q1_a3">Nuraghi</string>
    <string name="q2_a1">4,500</string>
    <string name="q2_a2">7,000</string>
    <string name="q2_a3">9,000</string>
    <string name="q3_a1">Nuraghe Arrubiu</string>
    <string name="q3_a2">Su Nuraxi Barumini</string>
    <string name="q3_a3">Nuraghe Santu Antine</string>
    <string name="q4_a1">Place of worship</string>
    <string name="q4_a2">Military watch tower</string>
    <string name="q4_a3">Not known</string>
    <string name="q5_a1">Autunno in Barbagia</string>
    <string name="q5_a2">San Giovanni Battista</string>
    <string name="q5_a3">Primavera in Gallura</string>
    <string name="q6_a1">La Pelosa, Stintino</string>
    <string name="q6_a2">Porto Cervo, Olbia</string>
    <string name="q6_a3">Cala Gonone, Nuoro</string>
    <string name="q7_a1">Cagliari</string>
    <string name="q7_a2">Alghero</string>
    <string name="q7_a3">Oristano</string>
    <string name="q8_a1">Stintino</string>
    <string name="q8_a2">Alghero</string>
    <string name="q8_a3">Costa Smeralda</string>
    <string name="q9_a1">La Magdalena</string>
    <string name="q9_a2">Caprera</string>
    <string name="q9_a3">Palau</string>
    <string name="q10_a1">Grotta del Bue Marino</string>
    <string name="q10_a2">Cala Goloritze</string>
    <string name="q10_a3">Tiscali</string>
    <string name="costa_smeralda">Costa Smeralda is the most expensive location in Europe. House prices reach up to 300,000 euros ($392,200) per square meter.\nWith white sand beaches, golf clubs, private jet and helicopter services, and exclusive hotels, the area has drawn celebrities, business leaders, and other affluent visitors.\n(Source: Wikipedia)</string>
    <string name="thank_you">Thank you for using\nSardinia Quiz!\nGod bless!</string>
    <string name="first_prize">You\'ve won the first prize!\nA week holiday in Costa Smeralda is yours!</string>
    <string name="second_prize">You\'ve won the second prize!\nA free guide in Su Nuraxi Barumini is yours!</string>
    <string name="third_prize">You\'ve won the third prize!\nYou deserve a welcome prosecco on your next holiday!</string>
    <string name="click_here">Click here for further info about the price</string>
    <string name="how_to_text">How do you want us to contact you?</string>
    <string name="via_email_text">Via email</string>
    <string name="via_mail_text">Via conventional mail</string>
    <string name="final_message_text">Your message</string>
</resources>
