<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name_text"
            style="@style/AppNameStyle"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/user_greeting"
            style="@style/MessageTextStyle"
            android:text="@string/welcome_greeting"
            app:fontFamily="serif" />

        <TextView
            android:id="@+id/question_text"
            style="@style/QuestionTextStyle"
            android:text="@string/q1_text" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1_text"
                style="@style/AnswerTextStyle"
                android:text="@string/q1_a1" />

            <RadioButton
                android:id="@+id/answer2_text"
                style="@style/AnswerTextStyle"
                android:text="@string/q1_a2" />

            <RadioButton
                android:id="@+id/answer3_text"
                style="@style/AnswerTextStyle"
                android:text="@string/q1_a3" />
        </RadioGroup>

        <Button
            android:id="@+id/next_button"
            style="@style/NextButtonStyle"
            android:onClick="nextButton"
            android:text="@string/next_button_text" />

    </LinearLayout>

</ScrollView>