<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name_text"
            style="@style/AppNameStyle"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/score_message"
            style="@style/UserScoreViewStyle"
            android:text="Your score"
            app:fontFamily="serif" />

        <TextView
            android:id="@+id/question_text"
            style="@style/QuestionTextStyle"
            android:text="@string/q3_text" />

        <EditText
            android:id="@+id/q3_input_text"
            style="@style/UserNameFieldStyle"
            android:autofillHints=""
            android:hint=""
            app:fontFamily="serif" />

        <Button
            android:id="@+id/next_button"
            style="@style/NextButtonStyle"
            android:onClick="nextButton"
            android:text="@string/next_button_text" />

    </LinearLayout>

</ScrollView>